<resources>
    <string name="app_name">KK HMS Study</string>
    <string name="id_auth_button_text">ID-Token Mode signin</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="sign_out_success">Signed out successfully</string>
    <string name="sign_out_failed">Signed out failed</string>
    <string name="sign_in_success">Signed in successfully</string>
    <string name="account_kit_lab_button_text">Account Kit</string>
    <string name="main_page_heading">HMS Codelabs App by KK</string>
    <string name="auth_kit_codelab_title">Auth Kit Codelab</string>
    <string name="push_kit_lab_button_text">Push Kit</string>
    <string name="silent_signin_result_success_text">Silent sign-in successful</string>
    <string name="trying_token_signin_after_silent_signin_failed">Silent sign-in failed, trying token sign-in</string>
    <string name="silent_sign_in_button_text">Silent Sign In</string>
    <string name="push_token_heading">Push token:</string>

    <!-- Analytics Lab -->
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="setting_button">Settings</string>
    <string name="next_button">Next</string>
    <string name="post_score_button">Post Score</string>
    <string name="save_setting_button">Save</string>
    <string name="q1">The largest planet in the solar system is Jupiter</string>
    <string name="q2">The first Olympic Games were held in Athens, Greece</string>
    <string name="q3">The violin has 6 strings</string>
    <string name="q4">Flying bats belong to birds</string>
    <string name="q5">Sound spreads faster in the water than in the air</string>
    <string name="wrong_answer">The answer is wrong.</string>
    <string name="correct_answer">The answer is correct.</string>
    <string name="hianalytics_lab_button">HiAnalytics</string>

    <!-- Splash Ads lab -->
    <string name="ad_id_splash">testq6zq98hecj</string>
    <string name="owner">HUAWEI Developer</string>
    <string name="copyright_info">Copyright 2020. Huawei Technologies Co., Ltd</string>
    <string name="status_load_ad_success">Ad loading state: loaded successfully.</string>
    <string name="status_load_ad_fail">Ad loading state: failed to be loaded. Error code: </string>
    <string name="status_ad_dismissed">Ad is dismissed.</string>


    <string name="iap_lab_button">IAP</string>
    <string name="favorite_sport_text">Favorite Sport:</string>
    <string name="location_button_text">Location Kit</string>
    <string name="remove_location_update_callback_button">Remove location update callback</string>
    <string name="request_location_update_with_callback_button">Request location update with callback</string>
    <string name="scan_kit_lab_button_text">Scan Kit</string>
    <string name="scan_kit_demo">Scan Kit Demo</string>
    <string name="scan_button">Scan</string>
    <string name="safety_kit_header">Safety Kit Demo</string>
    <string name="check_system_integrity_button_text">Check System Integrity</string>
    <string name="integrity_check_result_placeholder">Integrity check result:</string>
    <string name="check_apps_button_text">Check Apps</string>
    <string name="check_url_default_value">https://shop.huawei.com/ru/</string>
    <string name="check_url_button_text">Check Url</string>
    <string name="check_wifi_button_text">Check Wifi</string>
    <string name="safety_kit_button_text">Safety Kit</string>
    <string name="site_kit_button_text">Site Kit</string>
    <string name="map_kit_button_text">Map Kit</string>
    <string name="map_kit_header">Map Kit Lab</string>
    <string name="site_kit_header">Site Kit Lab</string>
    <string name="identity_kit_title">Identity Kit Lab</string>
    <string name="identity_kit_button_text">Identity Kit</string>
    <string name="get_huawei_user_address_buttin_text">Get Huawei User Address</string>
    <string name="identity_kit_demo_title">Identity Kit Demo</string>
    <string name="panorama_kit_button_text">Panorama Kit</string>
    <string name="panorama_kit_title">Panorama Kit Lab</string>
    <string name="scan_kit_lab_title">Scan Kit Lab</string>
    <string name="nearby_kit_button_text">Nearby Kit</string>
</resources>