<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RootActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/main_page_heading"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:onClick="onClick"
                android:text="@string/account_kit_lab_button_text"
                android:textSize="@dimen/main_button_text_fontsize"
                app:layout_constraintEnd_toStartOf="@+id/push_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/push_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:onClick="onClick"
                android:text="@string/push_kit_lab_button_text"
                android:textSize="@dimen/main_button_text_fontsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/account_button"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/iap_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:onClick="onClick"
                android:text="@string/iap_lab_button"
                android:textSize="@dimen/main_button_text_fontsize"
                app:layout_constraintEnd_toStartOf="@+id/analytics_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_button" />

            <Button
                android:id="@+id/analytics_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:onClick="onClick"
                android:text="@string/hianalytics_lab_button"
                android:textSize="@dimen/main_button_text_fontsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iap_button"
                app:layout_constraintTop_toBottomOf="@+id/push_button" />

            <Button
                android:id="@+id/location_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:onClick="onClick"
                android:text="@string/location_button_text"
                android:textSize="@dimen/main_button_text_fontsize"
                app:layout_constraintEnd_toStartOf="@+id/scan_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/analytics_button" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:onClick="onClick"
                android:text="@string/scan_kit_lab_button_text"
                android:textSize="@dimen/main_button_text_fontsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/location_button"
                app:layout_constraintTop_toBottomOf="@+id/analytics_button" />

            <Button
                android:id="@+id/safety_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:onClick="onClick"
                android:text="@string/safety_kit_button_text"
                android:textSize="@dimen/main_button_text_fontsize"
                app:layout_constraintEnd_toStartOf="@+id/site_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scan_button" />

            <Button
                android:id="@+id/site_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:drawableTop="@mipmap/ic_launcher_round"
                android:onClick="onClick"
                android:text="@string/site_kit_button_text"
                android:textSize="@dimen/main_button_text_fontsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/safety_button"
                app:layout_constraintTop_toBottomOf="@+id/scan_button" />

            <Button
                android:id="@+id/map_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:drawableTop="@mipmap/ic_launcher_round"

                android:onClick="onClick"

                android:text="@string/map_kit_button_text"
                android:textSize="@dimen/main_button_text_fontsize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/safety_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>